findex/src/main/java/com/example/findex/global/error/exception/BusinessException.java
package com.example.findex.global.error.exception;

import com.example.findex.global.error.ErrorCode;
import lombok.Getter;

@Getter
public class BusinessException extends RuntimeException {
  private final ErrorCode errorCode;

  public BusinessException(ErrorCode errorCode) {
    this.errorCode = errorCode;
  }
}
